--- a/econometrics.bib
+++ b/econometrics.bib
@@ -18,3 +18,12 @@
   year={1992},
   publisher={Dryden Press}
 }
+
+@article{estrella1996yield,
+  title={The yield curve as a predictor of US recessions},
+  author={Estrella, Arturo and Mishkin, Frederic S},
+  journal={Current issues in economics and finance},
+  volume={2},
+  number={7},
+  year={1996}
+}
